[package]
name = "katsu-scheme"
version = "0.1.0"
edition = "2021"
authors = ["Zhao Yongzhen <zhaoyzzz@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
lazy_static = "1.4.0"
clap = { version = "3.1.18", features = ["derive"] }

[dependencies.bril-rs]
version = "0.1.0"
path = "../bril/bril-rs"
features = ["ssa", "memory", "float", "speculate", "position"]


