[package]
name = "katsu"
version = "0.1.0"
edition = "2021"
authors = ["Zhao Yongzhen <zhaoyzzz@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
regex = "1"
pest_derive = "2.0"
clap = { version = "3.1.18", features = ["derive"] }

